--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "repo-manager",
+    "name": "repo-steward",
     "description": "1. auto commit in super project when running `git commit -m msg` in the submodule. 2. stop commit when entering `ROOT_SUPER_PROJECT`",
     "repository": {
         "type": "git",
