--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
         "zx": "^7.1.1"
     },
     "devDependencies": {
+        "@commander-js/extra-typings": "^10.0.2",
         "@types/fs-extra": "^11.0.1",
         "@types/inquirer": "^9.0.3",
         "esbuild": "0.17.5",
