--- a/package.json
+++ b/package.json
@@ -16,15 +16,16 @@
         "url": "https://github.com/HenryC-3/repo-manager-cli/issues"
     },
     "homepage": "https://github.com/HenryC-3/repo-manager-cli#readme",
-    "version": "0.0.3",
+    "version": "0.0.4",
     "type": "module",
     "main": "output/cli/index.cjs",
     "author": "HarryHe <henryhe0074@foxmail.com>",
     "scripts": {
         "watch": "node watch.config.js",
         "build": "node build.config.js",
-        "postinstall": "rp init",
-        "prepublishOnly": "NODE_ENV=production node build.config.js"
+        "prepublishOnly": "NODE_ENV=production node build.config.js",
+        "postinstall": "node ./output/cli/index.cjs init",
+        "preuninstall": "rp auto-update --disable"
     },
     "bin": {
         "rp": "./output/cli/index.cjs"
