--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,9 @@
 {
-    "cSpell.words": ["autoupdate"]
+    "cSpell.words": ["autoupdate"],
+    "json.schemas": [
+        {
+            "url": "https://unpkg.com/tsup/schema.json",
+            "fileMatch": ["package.json", "tsup.config.json"]
+        }
+    ]
 }
