--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
     "compilerOptions": {
-        "target": "ES2017",
-        "module": "ES2022",
+        "target": "ESNext",
+        "module": "ESNext",
         "moduleResolution": "nodenext",
         "strict": true,
         "forceConsistentCasingInFileNames": true,
