--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
         "eslint-config-google": "^0.14.0",
         "eslint-config-prettier": "^8.6.0",
         "prettier": "^2.8.3",
+        "semantic-release": "^20.1.3",
         "tsup": "^6.6.2",
         "typescript": "^4.9.5"
     }
