--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     },
     "devDependencies": {
         "@commander-js/extra-typings": "^10.0.2",
+        "@semantic-release/git": "^10.0.1",
         "@types/fs-extra": "^11.0.1",
         "@types/inquirer": "^9.0.3",
         "@types/node": "^18.13.0",
