--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -44,6 +44,9 @@ jobs:
 
             - name: Run build
               run: npm run build # use your build command
+              
+            - name: Run build:script
+              run: npm run build:script
 
             - name: Create release
               env:
